# LFA_Tema_2

./: .gitignore  CMakeLists.txt  DFA.cpp  DFA.h  FA.cpp  FA.h  NFA.cpp  NFA.h  former_bug.txt  main.cpp  nonminimal.txt  nothing.txt  random2.txt  random3.txt  random_test_generator.cpp  simple.txt
src/: Acceptor.h  DFA.cpp  DFA.h  FA.cpp  FA.h  NFA.cpp  NFA.h  color.hpp  libfsmWrapper.cpp  libfsmWrapper.h  main.cpp  random_test_generator.cpp  utils.cpp  utils.h
tests/: big.txt  empty.txt  etc1.txt  etc2.txt  lambda.txt  minimal.txt  nonminimal_dense.txt  nonminimal_tiny.txt  nonmininal_big.txt
